--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Voz Amiga</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <main class="container">
+    <h1>Voz Amiga</h1>
+    <section id="categorias">
+      <button onclick="abrirFrases('saudacoes')">👋 Saudações</button>
+      <button onclick="abrirFrases('comida')">🍽️ Comida</button>
+      <button onclick="abrirFrases('banheiro')">🚻 Banheiro</button>
+    </section>
+  </main>
+  <script src="js/main.js"></script>
+</body>
+</html>
