--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
   <main class="container">
     <h1>Voz Amiga</h1>
-    <section id="categorias">
-      <button onclick="abrirFrases('saudacoes')">👋 Saudações</button>
-      <button onclick="abrirFrases('comida')">🍽️ Comida</button>
-      <button onclick="abrirFrases('banheiro')">🚻 Banheiro</button>
-    </section>
+      <div class="logo-container">
+        <img src="assets/img/Logo.png" alt="Logo do site">
+      </div>
+
+      <div class="button-container">
+        <button <a href="pages/inicial.html"></a>>Começar</button>
+
+        <button <a href=""></a>>Ajuda</button>
+      </div>
   </main>
   <script src="js/main.js"></script>
 </body>
