Correção do link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Voz Amiga</title>
+  <title></title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
       </div>
 
       <div class="button-container">
-        <button <a href="pages/inicial.html"></a>>Começar</button>
+        <button>Começar <a href="pages/inicial.html"></a></button>
 
         <button <a href=""></a>>Ajuda</button>
       </div>
