--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       </div>
 
       <div class="button-container">
-        <button>Começar <a href="pages/inicial.html"></a></button>
+        <button>Começar <a href="/pages/inicial.html"></a></button>
 
-        <button <a href=""></a>>Ajuda</button>
+        <button>Ajuda <a href=""></a></button>
       </div>
   </main>
   <script src="js/main.js"></script>
