--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title></title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <main class="container">
@@ -19,6 +19,6 @@
         <button>Ajuda <a href=""></a></button>
       </div>
   </main>
-  <script src="js/main.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
