--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
       </div>
 
       <div class="button-container">
-        <button>Começar <a href="/pages/inicial.html"></a></button>
+        <a href="pages/inicial.html">
+          <button>Começar</button>
+        </a>
 
-        <button>Ajuda <a href=""></a></button>
+        <a href="">
+          <button>Ajuda</button>
+        </a>
       </div>
   </main>
   <script src="js/index.js"></script>
