Criação da inicial

--- a/index.html
+++ b/index.html
@@ -3,26 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title></title>
-  <link rel="stylesheet" href="css/index.css">
+  <title>Voz Amiga</title>
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <main class="container">
-    <h1>Voz Amiga</h1>
-      <div class="logo-container">
-        <img src="assets/img/Logo.png" alt="Logo do site">
-      </div>
+  <main class="content-bg">
+    <div class="logo-container">
+      <img src="assets/img/logo-voz-amiga.png" alt="Logo Voz Amiga" />
+    </div>
 
-      <div class="button-container">
-        <a href="pages/inicial.html">
-          <button>Começar</button>
-        </a>
-
-        <a href="">
-          <button>Ajuda</button>
-        </a>
-      </div>
+    <div class="button-container">
+      <a href="pages/inicial.html">
+        <button class="btn-primary">Começar</button>
+      </a>
+      <a href="pages/ajuda.html">
+        <button class="btn-outline">Ajuda</button>
+      </a>
+    </div>
   </main>
-  <script src="js/index.js"></script>
 </body>
 </html>
