--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -3,14 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title></title>
-  <link rel="stylesheet" href="css/inicial.css">
+  <title>O que você quer dizer?</title>
+  <link rel="stylesheet" href="../css/inicial.css" />
 </head>
 <body>
-  <main class="container">
-    <h5>Voz Amiga</h5>
-      
+  <header class="header">
+    <h1>O que você quer dizer?</h1>
+  </header>
+
+  <main class="grid">
+    <!-- Os cartões serão inseridos dinamicamente -->
   </main>
-  <script src="js/inicial.js"></script>
+
+  <div class="button-container">
+    <a href="../index.html"><button class="btn-medium">Voltar</button></a>
+    <a href="favoritos.html"><button class="btn-warning">⭐</button></a>
+  </div>
+
+  <script src="../js/inicial.js"></script>
 </body>
 </html>
