--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main class="content-bg">
     <div class="logo-container">
-      <img src="assets/img/logo-voz-amiga.png" alt="Logo Voz Amiga" />
+      <img src="assets/img/Logo.png" alt="Logo Voz Amiga" />
     </div>
 
     <div class="button-container">
